--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=Hzo1wKYL#E-LjWXKv9l1CUwvv03_SnY9tRFVTsjcJRwE6tNXCcds",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=ri5TEZBA#a10oiwcj2ZznDgV5g_UpsXWCzyyyhiNp4u3cFyedHPc",
       "required": true
     }  
 },
