--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=mzIzAIaS#x9k9jt18puPzFLuzM5cyJc-wWiUPFRww8nXg2gCmwWs",
       "required": true
     }  
 },
